tests/baselines/reference/incrementOperatorWithAnyOtherTypeInvalidOperations.errors.txt
==== tests/cases/compiler/incrementOperatorWithAnyOtherTypeInvalidOperations.ts (44 errors) ====
    // ++ operator on any type
    var ANY1;
    var ANY2: any[] = [1, 2];
    
    var obj: () => {}
    var obj1 = { x: "", y: () => { } };
    function foo(): any {
        var a;
        return a;
    }
    class A {
        public a: any;
        static foo() {
            var a;
            return a;
        }
    }
    module M {
        export var n: any;
    }
    var objA = new A();
    
    // any type var
    var ResultIsNumber1 = ++ANY2;
                            ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber2 = ++A;
                            ~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber3 = ++M;
                            ~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                            ~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber4 = ++obj;
                            ~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber5 = ++obj1;
                            ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber6 = ANY2++;
                          ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber7 = A++;
                          ~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber8 = M++;
                          ~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                          ~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber9 = obj++;
                          ~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber10 = obj1++;
                           ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // any type literal
    var ResultIsNumber11 = ++{};
                             ~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber12 = ++null;
                             ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                             ~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber13 = ++undefined;
                             ~~~~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber14 = null++;
                           ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber15 = {}++;
                           ~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
                           ~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber16 = undefined++;
                           ~~~~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // any type expressions
    var ResultIsNumber17 = ++foo();
                             ~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber18 = ++A.foo();
                             ~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber19 = ++(null + undefined);
                             ~~~~~~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber20 = ++(null + null);
                             ~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber21 = ++(undefined + undefined);
                             ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber22 = ++obj1.x;
                             ~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber23 = ++obj1.y;
                             ~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    var ResultIsNumber24 = foo()++;
                           ~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber25 = A.foo()++;
                           ~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber26 = (null + undefined)++;
                           ~~~~~~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber27 = (null + null)++;
                           ~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber28 = (undefined + undefined)++;
                           ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    var ResultIsNumber29 = obj1.x++;
                           ~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    var ResultIsNumber30 = obj1.y++;
                           ~~~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    // miss assignment operators
    ++ANY2;
      ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    ANY2++;
    ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
    
    ++ANY1++;
      ~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++ANY2++;
      ~~~~
!!! error TS2114: The type of a unary arithmetic operation operand must be of type 'any', 'number' or an enum type.
      ~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++ANY2[0]++;
      ~~~~~~~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.